--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
-  <app-find-game></app-find-game>
   <app-create-game></app-create-game>
+
+  <router-outlet></router-outlet>
 </div>
 
