--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -7,3 +7,6 @@
 <div class="codemaster-message">
   <app-codemaster-message-form></app-codemaster-message-form>
 </div>
+<div class="clueList">
+  <app-clue-list></app-clue-list>
+</div>
